# GFG-Stats-API

./: README.md  app.py  config.py  pyproject.toml  requirements.txt
models/: __init__.py  errors.py  exceptions.py  heatmap.py  profile.py  responses.py  solved_problems.py  stats.py  unified.py
models/canonical/: constants.py
routers/: __init__.py  docs.py  unified.py  user_profile.py  user_stats.py
routes/: __init__.py  badges.py  contests.py  docs.py  heatmap.py  legacy.py  profile.py  rating.py  stats.py  summary.py  topics.py
services/: __init__.py  canonical_mapper.py  client.py  gfg_service.py  heatmap.py  profile.py  solved_problems.py  stats.py  topics.py  unified_mapper.py
tests/: test_badges_endpoint.py  test_canonical.py  test_topics.py  test_unified.py
