[project]
name = "gfg-api"
version = "1.0.0"
description = "An API for analyzing GeeksForGeeks user problem-solving statistics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.32.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
